--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-   font-size: 15px;
+    
     font-family:  Verdana, Arial, Helvetica, sans-serif;
     background-color: #e6e6e6; 
     max-width: 40em; 
@@ -15,13 +15,30 @@ body {
     font-size: 150%;
     color: darkblue;
     border-bottom: thin dotted #32a1ce;
-    text-align: center;    
+    text-align: center;
+    
 }
 
 
-#main {
-    line-height: 1.5em;
+#aboutme {
+    
     margin: 30px;
+    line-height: 1.9;
+}
+
+#contact li {
+    
+      display: inline;    
+    padding: 0 10px;
+    
+   
+}
+#contact {
+   
+   justify-content:  center; 
+    margin: 0 auto;
+    display: table;    
+   
 }
 
 a:link {
@@ -46,15 +63,5 @@ a:active {
     text-decoration: underline;
 }
 
-#contact li {
-    display: inline;    
-    padding: 0 15px;
-    
-}
-#contact {
-   justify-content: center;
-    margin: 0 auto;
-    display: flex;
-   
-}
+
 
