--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body {
 h2{
     color: darkblue;
     font-size: 120%;
-    margin-top: 1.8em;
+    margin-top: 1.5em;
     margin-bottom: 2em;
     
 }
@@ -58,7 +58,7 @@ h2{
 }
 #contact {
    
-   justify-content:  center; 
+   /*justify-content:  center;*/ 
     margin: 0 auto;
     display: table;    
    
@@ -66,6 +66,9 @@ h2{
 
 #header a {
     color: darkblue;
+}
+#subtitle {
+    font-size: 80%;
 }
 a:link {
     color: #447888;
