--- a/styles/style.css
+++ b/styles/style.css
@@ -1,96 +1,112 @@
 body {
-    
-    font-family:  Verdana, Arial, Helvetica, sans-serif; /*"Andale mono",
-Lucida Console, Courier, monospace; */
-    background-color: #e6e6e6; 
-    max-width: 40em; 
-	margin:0 auto;
-	padding:50px;
-	font-size:18px;
-	line-height:1.6em;
-    
-
-}
-h2{
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    /*"Andale mono",
+  Lucida Console, Courier, monospace; */
+    background-color: #e6e6e6;
+    max-width: 40em;
+    margin: 0 auto;
+    padding: 50px;
+    font-size: 18px;
+    line-height: 1.6em;
+  }
+  
+  h2 {
     color: darkblue;
     font-size: 150%;
     margin: 1.2em 0;
- 
-    
-}
-
-#header {
+  }
+  
+  #header {
     font-family: Papyrus;
     font-size: 150%;
     color: darkblue;
     border-bottom: thin dotted #32a1ce;
     text-align: center;
-    
-}
-
-#menu li {
-    
-    display: inline;    
+  }
+  
+  #menu li {
+    display: inline;
     padding: 0 10px;
-    
-   
-}
-#menu {
-   
-   justify-content:  center; 
+  }
+  
+  #menu {
+    justify-content: center;
     margin: 0 auto;
-    display: table;    
-   
-}
-
-#aboutme {
+    display: table;
+  }
+  
+  #aboutme {
     margin: 30px;
     line-height: 1.5;
-}
-
-#contact li {
-    
-      display: inline;    
+  }
+  
+  #contact li {
+    display: inline;
     padding: 0 10px;
-    
-   
-}
-#contact {
-   
-   /*justify-content:  center;*/ 
+  }
+  
+  #contact {
+    /*justify-content:  center;*/
     margin: 0 auto;
-    display: table;    
-   
-}
-
-#header a {
+    display: table;
+  }
+  
+  #header a {
     color: darkblue;
-}
-#subtitle, #nowupdate{
+  }
+  
+  #subtitle,
+  #nowupdate {
     font-size: 80%;
-}
-    
-a:link {
+  }
+  
+  a:link {
     color: #447888;
     text-decoration: none;
-}
-
-a:visited {
+  }
+  
+  a:visited {
     color: #447888;
-}
-
-a:hover {
-    color: #447888;
-    text-decoration: underline;
-}
-a:focus {
+  }
+  
+  a:hover {
     color: #447888;
     text-decoration: underline;
-}
-a:active {
+  }
+  
+  a:focus {
     color: #447888;
     text-decoration: underline;
-}
-
-
-
+  }
+  
+  a:active {
+    color: #447888;
+    text-decoration: underline;
+  }
+  
+  @media screen and (max-width: 440px) {
+    div#header h1 {
+      font-size: 2em
+    }
+    body {
+      padding: 5px;
+      font-size: 17px;
+    }
+    #contact li {
+      padding: 0 20px;
+    }
+  }
+  
+  @media screen and (min-width: 440px) {
+    div#header h1 {
+      font-size: 2em
+    }
+    body {
+      padding: 5px;
+      font-size: 17px;
+    }
+    #contact li {
+      padding: 0 20px;
+    }
+  } 
+  
