--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     /*"Andale mono",
   Lucida Console, Courier, monospace; */
-    background-color: #e6e6e6;
+    background-color: #f2f2f2;
     max-width: 40em;
     margin: 0 auto;
     padding: 50px;
@@ -14,7 +14,13 @@ body {
     color: darkblue;
     font-size: 150%;
     margin: 1.2em 0;
+    font-weight: normal;
   }
+#date {
+  font-size: 90%;
+  font-family: monospace;
+  color: #686868;
+}
   
   #header {
     font-family: Papyrus;
@@ -35,11 +41,15 @@ body {
     display: table;
   }
   
-  #aboutme {
+  #content {
     margin: 30px;
     line-height: 1.5;
   }
-  
+
+ #content li {
+  margin-bottom: 1em;
+}
+
   #contact li {
     display: inline;
     padding: 0 10px;
@@ -59,6 +69,13 @@ body {
   #nowupdate {
     font-size: 80%;
   }
+
+#articles {
+  list-style: none;
+  padding: 0;
+  
+}
+
   
   a:link {
     color: #447888;
